--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -949,7 +949,7 @@ img {
 .img-thumbnail {
   display: inline-block;
   max-width: 100%;
-  height: auto;
+  height: 150px;
   padding: 4px;
   line-height: 1.42857143;
   background-color: #fff;
