--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -26,10 +26,11 @@ body {
   color: #676a6d; }
 
 a {
-  color: #3287B2; }
+  color: black; }
   a:hover, a:focus {
-    color: #3b98c8;
+    color: black;
     text-decoration: none; }
+
 
 th {
   font-weight: 600; }
@@ -706,38 +707,96 @@ fieldset[disabled] .btn {
 
 .label {
   font-weight: normal; }
-
-.metric {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  padding: 20px;
-  margin-bottom: 30px;
-  border: 1px solid #DCE6EB; }
-  .metric .icon {
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    float: left;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    background-color: #0081c2;
-    text-align: center; }
-    .metric .icon i {
-      font-size: 18px;
-      color: #fff; }
-  .metric p {
-    margin-bottom: 0;
-    line-height: 1.2;
-    text-align: right; }
-  .metric .number {
-    display: block;
-    font-size: 28px;
-    font-weight: 300; }
-  .metric .title {
-    font-size: 16px; }
-
+  .metric {
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    padding: 20px;
+    margin-bottom: 30px;
+    border: 1px solid red; }
+    .metric .icon {
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      float: left;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      background-color:red;
+      text-align: center; }
+      .metric .icon i {
+        font-size: 18px;
+        color: whitesmoke; }
+    .metric p {
+      margin-bottom: 0;
+      line-height: 1.2;
+      text-align: right; }
+    .metric .number {
+      display: block;
+      font-size: 28px;
+      font-weight: 300; }
+    .metric .title {
+      font-size: 16px; }
+    .metric2 {
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+      padding: 20px;
+      margin-bottom: 30px;
+      border: 1px solid #3287B2; }
+      .metric2 .icon {
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        float: left;
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        background-color:#3287B2;
+        text-align: center; }
+        .metric2 .icon i {
+          font-size: 18px;
+          color: whitesmoke; }
+      .metric2 p {
+        margin-bottom: 0;
+        line-height: 1.2;
+        text-align: right; }
+      .metric2 .number {
+        display: block;
+        font-size: 28px;
+        font-weight: 300; }
+      .metric2 .title {
+        font-size: 16px; }
+        .metric3 {
+          -webkit-border-radius: 3px;
+          -moz-border-radius: 3px;
+          border-radius: 3px;
+          padding: 20px;
+          margin-bottom: 30px;
+          border: 1px solid green; }
+          .metric3 .icon {
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            border-radius: 50%;
+            float: left;
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+            background-color:green;
+            text-align: center; }
+            .metric3 .icon i {
+              font-size: 18px;
+              color: whitesmoke; }
+          .metric3 p {
+            margin-bottom: 0;
+            line-height: 1.2;
+            text-align: right; }
+          .metric3 .number {
+            display: block;
+            font-size: 28px;
+            font-weight: 300; }
+          .metric3 .title {
+            font-size: 16px; }
 ul.activity-list > li {
   padding: 25px 0; }
   ul.activity-list > li:not(:last-child) {
