--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -950,6 +950,7 @@ img {
   display: inline-block;
   max-width: 100%;
   height: 150px;
+  width: 250px;
   padding: 4px;
   line-height: 1.42857143;
   background-color: #fff;
